--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "engines": {
     "node": "16.13.0",
-    "npm":"8.1.0"
+    "npm": "8.1.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-session": "^2.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.3.0",
+    "nodemon": "^3.1.0",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
